--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "PM25-Viz",
-  "description": "PM2.5 Visualization in China",
+  "name": "AQI-Viz",
+  "description": "Air quality Visualization in China",
   "version": "0.0.1",
   "private": true,
   "dependencies": {
-    "express": "3.x"
+    "express": "3.1.x"
   },
   "engines": {
     "node": "0.10.x",
