--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "AQI-Viz",
-  "description": "Air quality Visualization in China",
-  "version": "0.0.2",
+  "description": "Air Quality Visualization @China",
+  "version": "0.0.3",
   "private": true,
   "dependencies": {
     "express": "3.1.x"
